# uvc-server-plugin

./: CMakeLists.txt  README.md  buildspec.json
.github/workflows/: check-format.yaml
data/: uvc-monitor-overlay.html
data/locale/: en-US.ini
src/: plugin-main.cpp  uvc-manager.cpp  uvc-manager.hpp  uvc-settings-dialog.cpp  uvc-settings-dialog.hpp
src/native/: UVCController.h  UVCController.m  UVCType.h  UVCType.m  UVCValue.h  UVCValue.m  uvc_native.m
